--- a/src/components/nav/nav.hbs
+++ b/src/components/nav/nav.hbs
@@ -1,6 +1,6 @@
-<nav>
-  <ul>
-    <li><a href="/">Home</a></li>
-    <li><a href="/about">About</a></li>
+<nav class="nav">
+  <ul class="nav__list">
+    <li class="nav__item"><a href="/">Home</a></li>
+    <li class="nav__item"><a href="/about">About</a></li>
   </ul>
 </nav>
