--- a/src/styles/mixins/fonts.scss
+++ b/src/styles/mixins/fonts.scss
@@ -5,9 +5,9 @@
     font-family: $family;
     font-weight: $weight;
     font-style: $style;
-    src: url($font_file_path + '.woff') format('woff'),
-    url($font_file_path + '.woff2') format('woff2');
     font-display: swap;
+    src: url($font_file_path + '.woff2') format('woff2'),
+    url($font_file_path + '.woff') format('woff');
   }
 }
 
