--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -1,4 +1,10 @@
 .nav {
-  font-size: 50px;
+  font-family: $secondaryFontName;
+  font-size: 11px;
   font-weight: 400;
+
+  &__list {
+    display: flex;
+    gap: 24px;
+  }
 }
