add contents & articles styles

--- a/src/components/content/content.hbs
+++ b/src/components/content/content.hbs
@@ -7,24 +7,7 @@
 
     <div class='content__articles'>
       <template x-for='(article, index) in section.articles' :key='index'>
-        <div class='article'>
-          <span class='article__date' x-text="article.date.month +',&nbsp;'+ article.date.year"></span>
-
-          <div class='article__item'>
-            <span
-              class='article__category'
-              x-text="article.category[0] + '&nbsp;∙&nbsp;' + article.category[1]"
-            ></span>
-
-            <p class='article__description' x-text='article.title'></p>
-
-            <div class='article__img'>
-              <img :src='article.img.url' :alt='article.img.alt' />
-            </div>
-
-            <p class='article__text' x-text='article.text'></p>
-          </div>
-        </div>
+        {{> article/article }}
       </template>
     </div>
   </section>
