add smooth anchors

--- a/src/components/article/article.hbs
+++ b/src/components/article/article.hbs
@@ -13,6 +13,6 @@
       <img :src='article.img.url' :alt='article.img.alt' />
     </div>
 
-    <p class='article__description' x-text='article.description'></p>
+    <!--    <p class='article__description' x-text='article.description'></p>-->
   </div>
 </div>
