--- a/src/components/page/page.scss
+++ b/src/components/page/page.scss
@@ -2,12 +2,6 @@
   height: 100%;
   background: $color-black;
 
-  &__back-btn {
-    align-self: flex-end;
-    color: $primaryColor;
-    text-transform: uppercase;
-  }
-
   &__inner {
     padding: 20px;
     display: flex;
@@ -17,19 +11,20 @@
   }
 
   &__wrapper {
-    margin-left: 50px;
+    position: relative;
     padding: 40px 0 0 40px;
     display: flex;
     flex-direction: column;
-    border: 1px solid $color-gray;
   }
 
   &__content {
+    position: relative;
     padding-top: 24px;
     display: flex;
     max-width: 1600px;
     height: 100%;
     overflow: scroll;
     scroll-behavior: smooth;
+    z-index: 1;
   }
 }
