add styles to back btn

--- a/src/components/expand-border/expand-border.hbs
+++ b/src/components/expand-border/expand-border.hbs
@@ -1,5 +1,5 @@
 <div x-ref="border" class="expand-border">
   <div class="expand-border__back-btn">
-    <a href="#">Back</a>
+    -<a href="#">Back</a>
   </div>
 </div>
