--- a/src/components/page/page.hbs
+++ b/src/components/page/page.hbs
@@ -1,13 +1,15 @@
-<body x-data="animateBorder()" class="page">
-<div class="page__inner">
-  <div @mouseover="isHovered = true"
-       @mouseleave="isHovered = false"
-       class="page__wrapper">
+<!--<body x-data="animateBorder()" class="page">-->
+<body class="page">
+<div x-data="horizontalScrollWithDrag()" class="page__inner">
+  <div
+    @mouseover="isHovered = true"
+    @mouseleave="isHovered = false"
+    class="page__wrapper">
     {{> expand-border/expand-border }}
-    
+
     {{> header/header }}
 
-    <main x-data class="page__content">
+    <main x-ref="scrollContainer" class="page__content">
       {{> content/content}}
     </main>
   </div>
