--- a/src/components/page/page.scss
+++ b/src/components/page/page.scss
@@ -23,8 +23,9 @@
     display: flex;
     max-width: 1600px;
     height: 100%;
-    overflow: scroll;
-    scroll-behavior: smooth;
+    //overflow-x: auto;
+    //scroll-snap-type: x mandatory;
+    //scroll-behavior: smooth;
     z-index: 1;
   }
 }
