--- a/src/components/nav/nav.hbs
+++ b/src/components/nav/nav.hbs
@@ -6,7 +6,7 @@
           x-ref='navLinks'
           :href='item.url'
           x-text='item.label'
-          :data-target='item.label'
+          :data-section='item.label'
           @click.prevent='scrollToSection($event)'
           :class="{ 'active': isActive(item.label) }"
           class='nav__link'
