--- a/src/components/article/article.scss
+++ b/src/components/article/article.scss
@@ -1,9 +1,48 @@
 .article {
-  padding-left: 24px;
-  min-width: 405px;
-  border-left: 1px solid $color-gray;
+  padding: 0 24px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 405px;
+  height: 100%;
+  //min-width: 100px;
+  //height: 100vh;
+
+  &:not(:first-child) {
+    border-left: 1px solid $color-gray;
+  }
+
+  &__heading {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    align-self: center;
+    flex: 1 1 478px;
+    min-width: 478px;
+
+    &-year {
+      font-family: $secondaryFontName;
+      font-size: 11px;
+      line-height: 20px;
+      font-weight: 400;
+      color: $secondaryColor;
+    }
+
+    &-title {
+      font-family: $primaryFontName;
+      font-size: 32px;
+      line-height: 40px;
+      font-weight: 400;
+      color: $primaryColor;
+      white-space: pre-wrap;
+    }
+  }
 
   &__date {
+    position: absolute;
+    top: 0;
+    left: 0;
     font-family: $secondaryFontName;
     font-size: 11px;
     line-height: 20px;
@@ -13,7 +52,7 @@
   }
 
   &__item {
-    padding-top: 130px;
+    //padding-top: 130px;
     display: flex;
     flex-direction: column;
   }
@@ -28,7 +67,7 @@
   }
 
   &__title {
-    padding-top: 8px;
+    margin-top: 8px;
     font-family: $primaryFontName;
     font-size: 16px;
     line-height: 24px;
@@ -37,7 +76,7 @@
   }
 
   &__image {
-    padding-top: 24px;
+    margin-top: 24px;
   }
 
   &__description {
