--- a/src/components/page/page.scss
+++ b/src/components/page/page.scss
@@ -1,31 +1,27 @@
 .page {
-  height: 100%;
   background: $color-black;
+  overscroll-behavior: none;
 
   &__inner {
-    padding: 20px;
-    display: flex;
-    margin: 0 auto;
-    max-width: 1600px;
+    //padding: 20px;
+    //margin: 0 auto;
+    //max-width: 1600px;
     height: 100%;
+    //overflow: hidden;
   }
 
   &__wrapper {
-    position: relative;
-    padding: 40px 0 0 40px;
-    display: flex;
-    flex-direction: column;
+    //position: relative;
+    //max-width: 1600px;
+    //overflow: auto;
   }
 
   &__content {
-    position: relative;
-    padding-top: 24px;
+    //margin: 0 auto;
+    //position: relative;
+    //padding: 20px 0;
     display: flex;
-    max-width: 1600px;
-    height: 100%;
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    //scroll-behavior: smooth;
-    z-index: 1;
+    height: 100vh;
+    //z-index: 1;
   }
 }
